[project]
name = "etudier"
version = "0.2.1"
description = "Collect a citation graph from Google Scholar"
authors = [{name = "Ed Summers", email = "ehs@pobox.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.7",
    "requests>=2.28",
    "requests-html>=0.10",
    "networkx>=2.8",
    "lxml-html-clean>=0.3.1",
]

[project.scripts]
etudier = "etudier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
